# chrome-bld-git

./: .gitignore  EPOCH  MonochromePublic6432.aab.xz.01  PATCHES.md  README.md  VERSION_APK  note  retry  sha256  sha256.txt  sha512  sha512.txt  update_args
.github/workflows/: build-win-git.yaml  build-x64-git.yaml  chrome-public.yaml  monochrome.yaml  webview.yaml
build-113.0.5672.176/: 113.0.5672.176.bld.part.tar.xz.18  113.0.5672.176.bld.part.tar.xz.37  113.0.5672.176.bld.part.tar.xz.40  file.list  sha512
build-126.0.6478.188/: 126.0.6478.188.bld.part.tar.xz.35  file.list  sha512
build-126.0.6478.266/: 126.0.6478.266.bld.part.tar.xz.22  file.list  sha512
build-126.0.6478.270/: 126.0.6478.270.bld.part.tar.xz.08  file.list  sha512
config/: args.gn  gclient
origin/: build  build-x64-git.yaml  rec-src  rsync  trash
patches/: Add-menu-item-to-bookmark-all-tabs.patch  Add-support-for-writing-URIs.patch  Eyeo-Adblock-Cromite.patch  Fix-chromium-build-bugs.patch  Inject-scripts-for-AMP-tracking-ads-and-video.patch  Remove-SMS-integration.patch  Remove-binary-blob-integrations.patch  Remove-preload-of-com.google.android.gms.fonts.patch  Show-site-settings-for-cookies-javascript-and-ads.patch  i18n.patch  kill-Location-fall-back-to-system.patch  kill-Vision.patch
script/: 00-check  01-clean  02-binary  03-recovery  04-rsync  05-conf  06-build  07-package  08-push
