target_os = "win"
target_cpu = "x64"
treat_warnings_as_errors = false
is_debug = false
is_component_build = false
is_official_build = true
blink_symbol_level = 0
symbol_level = 0
chrome_pgo_phase = 0
dcheck_always_on = false
disable_fieldtrial_testing_config = true
enable_av1_decoder = true
enable_dav1d_decoder = true
enable_mse_mpeg2ts_stream_parser = true
enable_gvr_services = false
enable_hangout_services_extension = false
enable_mdns = false
enable_nacl = false
enable_iterator_debugging = false
enable_vr = false
ffmpeg_branding = "Chrome"
proprietary_codecs = true
icu_use_data_file = true
use_debug_fission = true
use_rtti = false
google_api_key = "aizasyduovftsgo8saxrmqkic90attzypjjnklc"
google_default_client_id = "77185425430.apps.googleusercontent.com"
google_default_client_secret = "OTJgUOQcT7lO7GsGZq2G4IlT"
