target_os = "linux"
target_cpu = "x64"
blink_symbol_level = 0
is_official_build = true
is_debug = false
is_component_build = false
chrome_pgo_phase = 0
dcheck_always_on = false
disable_fieldtrial_testing_config = true
enable_av1_decoder = true
enable_dav1d_decoder = true
enable_mse_mpeg2ts_stream_parser = true
enable_gvr_services = false
enable_hangout_services_extension = false
enable_iterator_debugging = false
enable_mdns = false
enable_nacl = false
enable_vr = false
exclude_unwind_tables = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
google_api_key = "aizasyduovftsgo8saxrmqkic90attzypjjnklc"
google_default_client_id = "77185425430.apps.googleusercontent.com"
google_default_client_secret = "OTJgUOQcT7lO7GsGZq2G4IlT"
icu_use_data_file = true
rtc_build_examples = false
symbol_level = 0
treat_warnings_as_errors = false
use_gnome_keyring = false
use_rtti = false
use_unofficial_version_number = false
