target_os = "android"
target_cpu = "arm64"
symbol_level = 0
blink_symbol_level = 0
is_official_build = true
is_debug = false
is_component_build = false
is_java_debug = false
android_channel = "stable"
chrome_pgo_phase = 0
dcheck_always_on = false
debuggable_apks = false
dfmify_dev_ui = false
disable_android_lint = true
disable_fieldtrial_testing_config = true
enable_av1_decoder = true
enable_dav1d_decoder = true
enable_mse_mpeg2ts_stream_parser = true
enable_hangout_services_extension = false
enable_iterator_debugging = false
enable_mdns = false
enable_nacl = false
exclude_unwind_tables = true
ffmpeg_branding = "Chrome"
proprietary_codecs = true
google_api_key = "aizasyduovftsgo8saxrmqkic90attzypjjnklc"
google_default_client_id = "77185425430.apps.googleusercontent.com"
google_default_client_secret = "OTJgUOQcT7lO7GsGZq2G4IlT"
icu_use_data_file = true
rtc_build_examples = true
treat_warnings_as_errors = false
use_errorprone_java_compiler = false
use_rtti = false
use_unofficial_version_number = false
chrome_public_manifest_package = "com.android.webview"
